test/patternMatch2_3.slq

def f[n:!â„•](x:ğ”¹^n)mfree{
	if nâ‰ 0{
		(H(a),)~f[n sub 1](b):=x; // error
		r:=(a,)~b; // error
	}else{
		r:=x;
	}
	return r;
}
def main(){
	return f(0:ğ”¹,0:ğ”¹,0:ğ”¹);
}
